force-app/main/default/objects/ProgressoQuestaoUsuario__c/ProgressoQuestaoUsuario__c.object-meta.xml
<CustomObject>
    <label>Progresso de Questão do Usuário</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progressos de Questão do Usuário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>