force-app/main/default/objects/ProgressoQuestaoUsuario__c/fields/Intervalo__c.field-meta.xml
<CustomField>
    <fullName>Intervalo__c</fullName>
    <label>Intervalo (dias)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>