force-app/main/default/objects/ProgressoQuestaoUsuario__c/fields/ProximaRevisao__c.field-meta.xml
<CustomField>
    <fullName>ProximaRevisao__c</fullName>
    <label>Próxima Revisão</label>
    <type>Date</type>
</CustomField>