force-app/main/default/objects/ProgressoQuestaoUsuario__c/fields/Questao__c.field-meta.xml
<CustomField>
    <fullName>Questao__c</fullName>
    <label>Questão</label>
    <referenceTo>Questao__c</referenceTo>
    <relationshipLabel>Progresso Questão Usuário</relationshipLabel>
    <relationshipName>ProgressoQuestaoUsuarios</relationshipName>
    <type>Lookup</type>
</CustomField>